doc: update docs